atualizando as validações e login

--- a/src/views/body/formulario.ejs
+++ b/src/views/body/formulario.ejs
@@ -91,7 +91,7 @@
       </div>
 
 
-    <form action="/formulario" method="post" id ="form" class="form">
+    <form action="/usuarios/formulario" method="post" id ="form" class="form">
 
  
       
