--- a/src/views/body/landingPageLogin.ejs
+++ b/src/views/body/landingPageLogin.ejs
@@ -169,7 +169,7 @@
             <section class="block_form2">
                
 
-                    <form action="/login" method="post">
+                    <form action="/usuarios/login" method="post">
                           
                       <h3>Clientes</h3>
                       <% if (typeof errors !=="undefined") {%> 
@@ -198,7 +198,7 @@
 
                           <button type="submit"> <strong> Entrar </strong></button>
 
-                          <p> Ainda não tem Cadastro ? </p><a href="/formulario">Clique aqui</a>
+                          <p> Ainda não tem Cadastro ? </p><a href="/usuarios/formulario">Clique aqui</a>
 
                     </form>
 
