--- a/src/views/body/viewCliente.ejs
+++ b/src/views/body/viewCliente.ejs
@@ -19,7 +19,7 @@
     <section class="primeiro_cabecalho">
       
       <article class="imagem_logo">
-          <a href="./">
+          <a href="/">
               <img class="imagem_logo_img" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa" >
           </a>
       </article>
@@ -131,7 +131,7 @@
   
   <h1>Olá <%= userLogged.username2 %> </h1>
   <h2>Seja bem vindo a sua página</h2>
-  <a href="/logout"><button>Sair da conta</button></a>
+  <a href="/usuarios/logout"><button>Sair da conta</button></a>
 
   <section>
     <article>
