--- a/src/views/body/area_compras_pet.ejs
+++ b/src/views/body/area_compras_pet.ejs
@@ -20,7 +20,7 @@
     <section class="primeiro_cabecalho">
       
       <article class="imagem_logo">
-          <a href="./">
+          <a href="/">
               <img class="imagem_logo_img" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa" >
           </a>
       </article>
