--- a/src/views/body/formulario.ejs
+++ b/src/views/body/formulario.ejs
@@ -25,7 +25,7 @@
     <section class="primeiro_cabecalho">
 
       <div class="imagem_logo4">
-          <a href="./">
+          <a href="/">
               <img class="imagem_logo_img4" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa"  >
           </a>
       </div>
