atualizando links na pagina viewClientes

--- a/src/views/body/viewCliente.ejs
+++ b/src/views/body/viewCliente.ejs
@@ -128,9 +128,10 @@
 </div>
 
 <main>
-  
+  <br>
   <h1>Olá <%= userLogged.username2 %> </h1>
-  <h2>Seja bem vindo a sua página</h2>
+  <h2>Seja bem vindo a sua página</h2><br>
+  <a href="/usuarios/formularioEdit/<%= userLogged.cpf2  %>">Alterar Cadastro</a>
   <a href="/usuarios/logout"><button>Sair da conta</button></a>
 
   <section>
