atualizando todo fluxo de validação de login/cliente

--- a/public/css/pageLogin.css
+++ b/public/css/pageLogin.css
@@ -75,6 +75,10 @@
   margin-top: 3%;
 }
 
+.p_validation{
+  color: #f71212;
+}
+
 
 @media (max-width:1500px) and (min-width:1076px) {
   .main_login{
