--- a/src/views/body/viewCliente.ejs
+++ b/src/views/body/viewCliente.ejs
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html lang="pt_BR">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Grupo seven / área cliente</title>
   <script src="https://kit.fontawesome.com/4d88c7f41d.js" crossorigin="anonymous"></script>
-  <title><%= produtoDetalhe2.description %></title>
-  <link rel="stylesheet" href="/css/menu_hamburguer.css">
-  <link rel="stylesheet" href="/css/area_compras_header.css">
-  <link rel="stylesheet" href="/css/area_compras.css">
+  <!--esse script é gerado pelo fontawesome.com que gera icones -->
 
+  <link rel="stylesheet" href="/css/formulario_header.css">
+  <link rel="stylesheet" href="/css/menu_hamburguer.css">
 </head>
 
 <body>
-
   <header>
 
+    
     <section class="primeiro_cabecalho">
       
       <article class="imagem_logo">
@@ -59,14 +59,13 @@
                 
   </section>
 
-
-
       <section class="segunda_cabecalho">
 
         <article class="link">
 
-        <a id="button_menu"> <i class="fa-solid fa-list"></i></a> <p class="texto_nav"> Navegue aqui</p> 
-          
+          <a id="button_menu"> <i class="fa-solid fa-list"></i></a> <p class="texto_nav"> Navegue aqui</p>  
+
+
         </article>
 
          <article class="abas">
@@ -87,23 +86,24 @@
               <p class="oferta"><strong>Ofertas </strong> </p>
 
          </article>
-     
+
 
       </section>
 
-  
+
   </header>
 
- <section class="body_menu_hamburguer" ></section>
+
+  <section class="body_menu_hamburguer" ></section>
   <div class="menu_hamburguer" id="menu_hamburguer">
     
     <ul>
         <li class="lista_label_hambuerguer">
           Variedades
            <ul >
-            <a href="/variedades.html"> <li>Eletrônicos</li></a>
-            <a href="/variedades.html"> <li>Móveis</li></a>
-            <a href="/variedades.html"><li>Roupas</li></a>
+            <a href="variedades.html"> <li>Eletrônicos</li></a>
+            <a href="variedades.html"> <li>Móveis</li></a>
+            <a href="variedades.html"><li>Roupas</li></a>
            </ul>
         </li>
 
@@ -127,62 +127,24 @@
 
 </div>
 
-          <!-- Inicio Primeira Section ---------------------------------------------------------------------------->   
+<main>
+  <br>
+  <h1>Olá <%= userLogged.username2 %> </h1>
+  <h2>Seja bem vindo a sua página</h2><br>
+  <a href="/usuarios/formularioEdit/<%= userLogged.cpf2  %>">Alterar Cadastro</a>
+  <a href="/usuarios/logout"><button>Sair da conta</button></a>
 
-    <section class="Articos_Compras">
-            <!-- Inicio Primeiro Artico  de Imagens---------------------------------------------------------------------------->  
-        
-          <article class="Primeiro_Artico_Compras">
-              <div class="Primeiro_Bloco_Superior"><img src="/img/<%= produtoDetalhe2.image %>" alt="img variedades">
-              </div>
+  <section>
+    <article>
+      <p>Compras</p>
+      <p>Favoritos</p>
+      <p>Carinhos</p>
+    </article>
+  </section>
 
-              <div class="Segundo_Bloco">
-                  <img src="/img/<%= produtoDetalhe2.image %>" alt="img variedades">
-                  <img src="/img/<%= produtoDetalhe2.image %>" alt="img variedades">
-                  <img src="/img/<%= produtoDetalhe2.image %>" alt="img variedades">
-              </div>
-          </article>
-
-            <!-- fim Primeiro Artico de imagens---------------------------------------------------------------------------->      
-
-          <!-- Inicio Artico texto ------------------------------------------------------------------------->
-
-          <article class="Segundo_Artico_Compras">
-            <div class="Text">
-              <h3>Descrição do produto :</h3>
-              <p><%= produtoDetalhe2.texto %></p>
-            </div>
-
-          </article>
-
-  <!--fim Artico Texto----------------------------------------->      
-
-  <!-- Inicio Artico Aside ------------------------------------------------------------------------->
-
-          <article class="Terceiro_Artico_Compras">
-            <div>
-              <i class="fa-solid fa-basket-shopping"></i>
-              <h3><%= produtoDetalhe2.description %></h3>
-              <p>R$ <%= produtoDetalhe2.price %></p>
-              <button type="submit">Comprar</button>
-
-            </div>
-
-    
-
-          </article>
-
-        <!--fim Artico Aside----------------------------------------->      
-        
+</main>
   
- </section> 
-
- <section class="rodapé_compras">
-
-</section>
-
-
-
+  
 </body>
 
 
