--- a/src/views/body/variedades.ejs
+++ b/src/views/body/variedades.ejs
@@ -16,8 +16,79 @@
 </head>
 
 <body>
-  
-  <%- include("../partials/header) %>
+  <header>
+
+    <section class="primeiro_cabecalho">
+      
+      <article class="imagem_logo">
+        <a href="./">
+              <img class="imagem_logo_img" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa" >
+          </a>
+      </article>
+   
+      <article class="article_form1">
+          <form class="form_primeiro_cabecalho" action="#" method="post">
+              
+              <input class="caixa_texto" type="text" name="search" id="search" placeholder="Procure aqui"required >
+              <button class="botao" type="submit"> <i class="fa-solid fa-magnifying-glass"></i> </button>
+            
+          </form>
+      </article>
+      
+      <div class="all_button">
+      <article class="article_form2">
+       
+          <form class="form_primeiro_cabecalho2" action="#" method="post">
+            
+            <a class="botao2"  href="/login">  <i id="bota2_i" class="fa-solid fa-user"></i></a>
+              <!--a tag "i" estou utilizando o icone do fontawesome.com -->
+    
+          </form>
+          <p class="text_botao2">Cadastro</p>
+
+      </article>
+       
+      <article class="article_form3">
+          <form class="form_primeiro_cabecalho3" action="#" method="post">
+
+              <a class="botao3" type="submit"> <i id="bota3_i"  class="fa-solid fa-cart-arrow-down"></i> </a> 
+              <!--a tag "i" estou utilizando o icone do fontawesome.com -->
+
+          </form>
+          <p class="text_botao3" >Carrinho</p>
+      </article> 
+    </div>  
+                
+  </section>
+
+
+    <section class="segunda_cabecalho">
+
+      <article class="link">
+        <a id="button_menu"> <i class="fa-solid fa-list"></i></a> <p class="texto_nav"> Navegue aqui</p> 
+      </article>
+
+       <article class="abas">
+
+        <a class="tagA_segundo_cabecalho" id="pag_farmacia"  href="/variedades">
+             <p class="mercado"><strong>Variedades</strong>  </p> 
+        </a>
+
+        <a class="tagA_segundo_cabecalho"  href="/pet">
+             <p class="pet"><strong>Espaço pet</strong> </p>
+        </a>
+
+            <p class="farmacia" ><strong>Farmácia </strong> </p>
+
+            <p class="oferta"><strong>Ofertas </strong> </p>
+
+       </article>
+
+
+
+    </section>
+
+  </header>
   
   <section class="body_menu_hamburguer" ></section>
   <div class="menu_hamburguer" id="menu_hamburguer">
@@ -118,18 +189,17 @@
               
               <div class="products1">
                   <!--corpo com imagens e detalhes com texto etc...-->
-                  <% productsVariedades.array.forEach(element => { %>
+                  <% productsVariedades.forEach(element => { %>
                     
-                    <div>
-                      <img id="imgsize" src="/img/<%= element1.image %>" alt="">
-                    
-                      <img class = "img_elementoUm_article_div" src="/img/<%= element1.image %>" alt="">
-                      <p><%= element1.description %> </p>
-                      <P> R$ <%= toThousand(element1.price) %> </P>
-                      <a target="_blank" href="/produtos/area_compras_farmacia/<%= element1.item %> ">
-                        <button id="button_comprar" type="submit">Comprar</button></a>
+                    <div>                  
+                      <img id= "imgsize" src="/img/<%= element.image %>" alt="">
+                      <p><%= element.description %> </p>
+                      <p> R$ <%= toThousand(element.price) %> </p>
+                      <a target="_blank" href="/produtos/area_compras_variedades/<%= element.item %> ">
+                        <button id="button_comprar" type="submit">Comprar</button>
+                      </a>
                       <button type="submit">Carrinho</button>
-                  </div>
+                    </div>
         
                 <% }) %>
         
@@ -137,27 +207,6 @@
         
          
         <!-- fim primeiro block de imagens---------------------------------------------------------------------------->
-        
-        <!-- inicio segundo block de imagens---------------------------------------------------------------------------->
-        
-            <section class="elementoDois_article" >
-        
-              <% productsFarmacia2.forEach(element2 => { %>
-               
-                <div class="elementoDois_article_div" >
-                    <img class = "img_elementoDois_article_div" src="/img/<%= element2.image %>" alt="">
-                    <p><%= element2.description %></p>
-                    <P>R$ <%= toThousand(element2.price) %></P>
-                    <a  target="_blank" href="/produtos/area_compras_farmacia/<%= element2.item %>">
-                      <button id="button_comprar" type="submit">Comprar</button></a>
-                    <button type="submit">Carrinho</button>
-                </div>
-        
-              <% }) %>
-        
-            </section>
-        
-        <!-- fim segundo block de imagens---------------------------------------------------------------------------->
         
         </main>
         
