--- a/src/views/body/formularioEmpresas.ejs
+++ b/src/views/body/formularioEmpresas.ejs
@@ -25,7 +25,7 @@
     <section class="primeiro_cabecalho">
 
       <div class="imagem_logo4">
-          <a href="./">
+          <a href="/">
               <img class="imagem_logo_img4" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa"  >
           </a>
       </div>
@@ -91,7 +91,7 @@
       </div>
 
 
-    <form action="/formularioEmpresas" method="post" id ="form" class="form">
+    <form action="/empresas/formularioEmpresas" method="post" id ="form" class="form">
 
  
       
