--- a/src/views/body/formularioEmpresasEdit.ejs
+++ b/src/views/body/formularioEmpresasEdit.ejs
@@ -25,7 +25,7 @@
     <section class="primeiro_cabecalho">
 
       <div class="imagem_logo4">
-          <a href="./">
+          <a href="/">
               <img class="imagem_logo_img4" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa"  >
           </a>
       </div>
@@ -91,7 +91,7 @@
       </div>
 
 
-    <form action="/formularioEmpresasEdit/<%= CNPJEdit.CNPJ %>?_method=PUT " method="POST" id ="form" class="form">
+    <form action="/empresas/formularioEmpresasEdit/<%= CNPJEdit.CNPJ %>?_method=PUT " method="POST" id ="form" class="form">
 
 
           <div class="form-control">
@@ -158,7 +158,7 @@
 						
     </form>
          
-    <form action="/formularioEmpresasEdit/<%= CNPJEdit.CNPJ %>?_method=DELETE" method="POST" >
+    <form action="/empresas/formularioEmpresasEdit/<%= CNPJEdit.CNPJ %>?_method=DELETE" method="POST" >
       <button type="submit" class="action-button delete">Apagar dados</button>
     </form>
 
